# Multi-Robot-Task-Orchestration-and-Delegation-Platform-MRTODP-

./: .env.example  .gitignore  LICENSE.md  README.md  SETUP.md
.github/workflows/: ci.yml
backend/ada/safety/: safety.adb
backend/assembly/drivers/: control.asm
backend/bash/deploy/: setup.sh
backend/c/drivers/: driver.c
backend/cpp/robot_interface/: interface.cpp
backend/cpp/task_manager/: CMakeLists.txt  orchestrator.cpp  orchestrator.hpp  schema.sql
backend/csharp/integration/: windows.cs
backend/cuda/kernels/: ai_kernel.cu
backend/elixir/: mix.exs
backend/elixir/marketplace/: server.ex
backend/go/executor/: executor.go
backend/java/compatibility/: adapter.java
backend/julia/: Project.toml
backend/julia/neural/: network.jl
backend/julia/quantum/: circuit.jl
backend/lisp/: macros.lisp  planner.lisp
backend/lua/scripts/: task.lua
backend/matlab/simulations/: simulator.m
backend/ocaml/verification/: verifier.ml
backend/python/: __init__.py  cli.py  requirements.txt
backend/python/ai_engine/: __init__.py  delegator.py  orchestrator.proto
backend/python/ros_bridge/: __init__.py  ros_communicator.py
backend/robot_langs/karel/: task.krl
backend/robot_langs/krl/: task.krl
backend/robot_langs/rapid/: task.rapid
backend/robot_langs/val3/: task.val3
backend/rust/: Cargo.toml
backend/rust/src/: lib.rs  scheduler.rs
backend/scala/: build.sbt
backend/scala/marketplace/: api.scala
backend/scala/src/main/resources/: application.conf  schema.sql
backend/verilog/controllers/: controller.v
backend/zig/drivers/: driver.zig
deploy/: Dockerfile  aws_config.yml  docker-compose.yml  kubernetes.yml
docs/: api.md  architecture.md  setup.md
frontend/: package.json
frontend/public/: index.html
frontend/src/: App.js  index.js
frontend/src/components/: Marketplace.js  Navbar.js  TaskManager.js
frontend/src/styles/: tailwind.css
tests/cpp/: test_orchestrator.cpp
tests/julia/: test_neural.jl
tests/lisp/: test_planner.lisp
tests/python/: test_delegator.py
tests/rust/: test_scheduler.rs
